# python-project-lvl2

./: Makefile  README.md  pyproject.toml
gendiff/: __init__.py  argparse.py  generate_diff.py
gendiff/scripts/: gendiff.py
hexlet_code/: argparse.py  generate_diff.py
hexlet_code/scripts/: gendiff.py
