[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vladislav Isupov"]
packages = [
  { include = "hexlet_code" }
]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
